syntax = "proto3";

option csharp_namespace = "ApiGateway";

package model;

service Games {
	rpc GetGameList (EmptyGame) returns (GameList);
}

message EmptyGame{}

message Game{
	int32 id = 1;
	string name = 2;
	string description = 3;
}

message GameList {
	repeated Game games = 1;
}

